--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -1,8 +1,9 @@
 name: Generate terraform docs
 on:
+  push:
+    branches: [ "*" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "*" ]
 jobs:
   docs:
     runs-on: ubuntu-latest
